# QRsign

./: .gitignore  README.md  pyproject.toml
qrsign/: config.ini  main.py  make_qr.py
qrsign/arrange_qr/: make_qr.py
